--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = truebranch
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+user = simonasantamaria
+description = A novel way of distinguishing truthfully from untruthfully reported imagery by using low-resolution satellite data to verify the location of high-resolution drone data.
+keywords = triplet loss, remote sensing, satellite images, NAIP, deep learning
+author = Simona Santamaria
+author_email = simona.santamaria@hotmail.com
+copyright = Simona Santamaria
 branch = master
 version = 0.0.1
 min_python = 3.6
