--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = pytorch_metric_learning numpy torchvision torch Pillow logging faiss matplotlib record_keeper
+requirements = pytorch_metric_learning numpy torchvision torch Pillow faiss matplotlib record_keeper
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
